<resources>
    <string name="app_name">ACME</string>

    <string name="header_profile">Profile</string>
    <string name="header_basket">Basket</string>
    <string name="header_checkout">Checkout</string>
    <string name="header_payment_qrcode">Payment - QRCode</string>
    <string name="header_payment_nfc">Payment - NFC</string>
    <string name="header_transaction_detail">Transaction Details</string>
    <string name="header_settings">Settings</string>

    <string name="title_registration">Registration</string>
    <string name="title_login">Login</string>

    <string name="subtitle_personal_info">Personal information</string>
    <string name="subtitle_card_info">Payment information</string>
    <string name="subtitle_pick_voucher">Pick a voucher</string>
    <string name="subtitle_accumulated_amount">Accumulated amount</string>
    <string name="subtitle_vouchers">Vouchers</string>

    <string name="label_name">Name:</string>
    <string name="label_nickname">Nickname:</string>
    <string name="label_password">Password:</string>
    <string name="label_total_spent">Total spent:</string>
    <string name="label_amount_to_discount">To discount:</string>
    <string name="label_card_no">Card no.:</string>
    <string name="label_total">Total:</string>
    <string name="label_amount">Amount:</string>
    <string name="label_subtotal">Subtotal:</string>
    <string name="label_discounted">Discounted:</string>
    <string name="label_accumulated">Accumulated:</string>
    <string name="label_from_date">From:</string>
    <string name="label_to_date">To:</string>


    <string name="tab_profile">Profile</string>
    <string name="tab_transactions">Transactions</string>

    <string name="dialog_title_edit_personal">Edit Personal Information</string>
    <string name="dialog_title_edit_payment">Edit Payment Information</string>

    <string name="btn_register">Register</string>
    <string name="btn_login">Login</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>

    <string name="success_edit_personal">Personal information updated successfully</string>
    <string name="success_edit_payment">Payment information updated successfully</string>
    <string name="error_already_registered">Error: Already registered an account on this device</string>
    <string name="error_getting_keys">Could not get the public key from the key store</string>
    <string name="error_invalid_credentials">Invalid nickname or password</string>
    <string name="error_qrcode_generation">Error generating qrcode</string>
    <string name="error_fetching_user_information">Error fetching user information from server</string>
    <string name="error_updating_user_name">Error updating user name</string>
    <string name="error_updating_user_cardNo">Error updating user card number</string>
    <string name="error_invalid_qrcode">That qrcode is not legit.</string>
    <string name="error_fetching_prodcut">Error getting all the product information from server</string>
    <string name="error_getting_product">Error getting all the product information</string>

    <string name="template_price">%.2f €</string>
    <string name="template_percentage">%d%%</string>
    <string name="template_quantity_times">%d x</string>
    <string name="template_notification_title">New transaction - %.2f €</string>

    <string name="name">Name</string>
    <string name="card_number">Card Number</string>
    <string name="checkout">Checkout</string>
    <string name="discount">Discount</string>
    <string name="confirm">Confirm</string>
    <string name="supermarket_name">ACME</string>
    <string name="date">Date</string>
    <string name="voucher">Voucher</string>
    <string name="no_vouchers">No vouchers</string>
    <string name="no_transactions">No transactions to display</string>
    <string name="notification_message">Check out your latest transaction details!</string>
    <string name="notifications">Notifications</string>
    <string name="default_checkout_method">Default checkout method</string>
    <string name="info_checkout_method">(Long click the checkout button to alternate  between methods)</string>
    <string name="nfc">NFC</string>
    <string name="qrcode">QRCode</string>
    <string name="nfc_service">NfcService</string>
    <string name="nfc_instructions">Hold your phone against the terminal to proceed with the checkout!</string>
    <string name="checkout_qrcode">Checkout by QRcode</string>
    <string name="checkout_nfc">Checkout by NFC</string>
    <string name="scanner_prompt">Scan your product!</string>
    <string name="nfc_not_enabled">NFC is not enabled</string>
    <string name="nfc_not_supported">NFC is not supported</string>
    <string name="date_time_separator">-</string>

</resources>
