<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_shop"
        android:icon="@drawable/shopping_cart_icon"
        android:title="@string/header_basket"
        app:iconTint="?attr/colorOnPrimary"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/profile_icon"
        android:title="@string/header_profile"
        app:iconTint="?attr/colorOnPrimary"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/settings_icon"
        android:title="@string/header_settings"
        app:iconTint="?attr/colorOnPrimary"
        app:showAsAction="ifRoom" />
</menu>