<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:layout_margin="10dp">

    <EditText
        android:id="@+id/edt_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:hint="@string/name"
        android:textColor="?attr/colorOnSecondary"
        android:backgroundTint="?attr/colorOnSecondary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/edt_btn_ok"
            style="@style/Button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/btn_save"/>

        <Button
            android:id="@+id/edt_btn_cancel"
            style="@style/Button"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/btn_cancel"/>

    </LinearLayout>

</LinearLayout>