<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.profile.TransactionsFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/transactions_cl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_transactions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@android:color/transparent"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <TextView
            android:id="@+id/tv_no_transactions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:text="@string/no_transactions"
            android:visibility="gone"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/filter_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end|bottom"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/filter"
            app:backgroundTint="?android:colorAccent"
            app:fabCustomSize="50dp"
            app:tint="?attr/colorSecondary" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:id="@+id/filter_bb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:paddingVertical="10dp"
        android:visibility="invisible"
        tools:ignore="BottomAppBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/date_bg_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/input_background"
                android:backgroundTint="?colorSecondary"
                android:orientation="vertical"
                android:layout_marginHorizontal="10dp"
                android:paddingVertical="4dp"
                android:paddingHorizontal="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_from_date"
                    android:textColor="@color/gray"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/date_bg_tv"
                        style="@style/DateTimeEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="5" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:backgroundTint="@android:color/transparent"
                        android:src="@drawable/calendar"
                        app:tint="@color/gray" />

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/date_end_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/input_background"
                android:backgroundTint="?colorSecondary"
                android:orientation="vertical"
                android:layout_marginHorizontal="10dp"
                android:paddingVertical="4dp"
                android:paddingHorizontal="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_to_date"
                    android:textColor="@color/gray"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/DateTimeEdit"
                        android:id="@+id/date_end_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="5" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:backgroundTint="@android:color/transparent"
                        android:src="@drawable/calendar"
                        app:tint="@color/gray" />

                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/colapse_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="fitStart"
                android:src="@drawable/arrow_down"
                android:backgroundTint="@android:color/transparent"
                app:tint="?attr/colorSecondary"/>

        </LinearLayout>
    </com.google.android.material.bottomappbar.BottomAppBar>
</FrameLayout>